--- a/styles/mlStyle.css
+++ b/styles/mlStyle.css
@@ -121,24 +121,30 @@ section {
   padding: 20px 0;
   margin: 0;
   border-bottom: 2px solid #D9D9D9;
-  position: relative;
+}
+#service .container {
+  margin-top: -120px;
 }
 #service .container .splide__slide {
-  padding: 120px 10px 0 10px;
+  padding: 180px 10px 0 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  opacity: 0.5;
+  transition: opacity 0.5s;
 }
 #service .container .splide__slide .info-bulle {
-  width: 300px;
+  width: 320px;
   padding: 20px;
   position: absolute;
-  top: 15px;
+  bottom: 130px;
   left: 50%;
   transform: translateX(-50%);
   background-color: var(--cl-white);
   box-shadow: 0px 0px 3px 0px rgba(25, 58, 75, 0.4);
   display: none;
+  border-radius: 30px;
   z-index: 20;
 }
 #service .container .splide__slide .info-bulle h2 {
@@ -173,6 +179,9 @@ section {
   font-size: 12px;
   text-align: center;
   word-wrap: wrap;
+}
+#service .container .splide__slide.is-visible {
+  opacity: 1;
 }
 #service .container .splide__arrow {
   top: 100%;
@@ -354,6 +363,7 @@ section {
 #faq .container .card .grid-container > div:last-child .accordion .accordion-item .accordion-header {
   display: flex;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 #faq .container .card .grid-container > div:last-child .accordion .accordion-item .accordion-header h4, #faq .container .card .grid-container > div:last-child .accordion .accordion-item .accordion-header span {
   color: var(--cl-black);
@@ -370,20 +380,20 @@ section {
   font-weight: bold;
   transition: 0.5s;
 }
-#faq .container .card .grid-container > div:last-child .accordion .accordion-item .accordion-header span.active::before {
-  content: "+";
-}
 #faq .container .card .grid-container > div:last-child .accordion .accordion-item .accordion-body {
   height: 0;
   opacity: 0;
+  transition: height 0.5s, opacity 0.05s;
 }
 #faq .container .card .grid-container > div:last-child .accordion .accordion-item .accordion-body p {
   font-size: 14px;
   color: var(--cl-white);
 }
+#faq .container .card .grid-container > div:last-child .accordion .accordion-item .accordion-header.active span::before {
+  content: "+";
+}
 #faq .container .card .grid-container > div:last-child .accordion .accordion-item .accordion-body.active {
-  height: -moz-fit-content;
-  height: fit-content;
+  height: 70px;
   opacity: 1;
 }
 #faq .container .card .grid-container > div:last-child .accordion .accordion-item:last-child {
@@ -420,13 +430,15 @@ section {
   justify-content: center;
 }
 #reseaux .container .grid-container > div:first-child > a {
-  margin: 20px;
+  margin: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 14px;
 }
 #reseaux .container .grid-container > div:first-child > a img {
   margin-bottom: 10px;
+  width: 50px;
 }
 #reseaux .container .grid-container > div:last-child {
   display: flex;
@@ -553,21 +565,26 @@ section {
 }
 #contact .container .card .grid-container > .form-container .coords {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 #contact .container .card .grid-container > .form-container .coords > div {
   display: flex;
   margin-right: 30px;
 }
 #contact .container .card .grid-container > .form-container .coords > div img {
-  width: 40px;
+  width: 30px;
   margin-right: 15px;
 }
 #contact .container .card .grid-container > .form-container .coords > div > div h5 {
   font-weight: bold;
+  font-size: 14px;
   margin-bottom: 5px;
 }
 #contact .container .card .grid-container > .form-container .coords > div > div a, #contact .container .card .grid-container > .form-container .coords > div > div a:hover, #contact .container .card .grid-container > .form-container .coords > div > div a:visited {
   color: var(--cl-blue-light);
+  font-size: 14px;
 }
 #contact .container .card .grid-container > .map-container iframe {
   width: 100%;
@@ -587,7 +604,7 @@ footer .container > div:first-child {
 }
 footer .container > div {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 30px;
 }
 footer .container > div > div {
@@ -613,6 +630,13 @@ footer .container > div > .reseaux > div img {
   width: 40px;
   margin-right: 20px;
 }
+footer .container > div:last-child {
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+footer .container > div:last-child h4 {
+  font-size: 14px;
+}
 
 #end {
   padding: 10px 20px;
@@ -635,7 +659,7 @@ footer .container > div > .reseaux > div img {
   }
   #faq .container .card .grid-container > div:first-child {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     margin: 0;
   }
   #faq .container .card > h2 {
@@ -673,5 +697,44 @@ footer .container > div > .reseaux > div img {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 50px;
+  }
+  #contact .container .card .grid-container > .form-container .coords {
+    flex-direction: row;
+  }
+}
+#mentionslegales {
+  margin-top: 130px !important;
+}
+
+#mentionslegales, #politiques {
+  padding: 60px 14px 20px 14px;
+}
+#mentionslegales .container h2, #politiques .container h2 {
+  font-size: 36px;
+  font-weight: bold;
+  color: var(--cl-blue-dark);
+  margin-bottom: 30px;
+}
+#mentionslegales .container h3, #politiques .container h3 {
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--cl-blue-dark);
+  margin-bottom: 20px;
+}
+#mentionslegales .container p, #politiques .container p {
+  color: var(--cl-blue-dark);
+  margin-bottom: 10px;
+}
+#mentionslegales .container div p:last-child, #politiques .container div p:last-child {
+  margin-bottom: 30px;
+}
+
+#politiques {
+  padding-bottom: 50px;
+}
+
+@media (min-width: 576px) {
+  footer .container > div {
+    grid-template-columns: repeat(3, 1fr);
   }
 }/*# sourceMappingURL=mlStyle.css.map */
