--- a/styles/mlStyle.scss
+++ b/styles/mlStyle.scss
@@ -141,28 +141,34 @@ section {
     padding: 20px 0;
     margin: 0;
     border-bottom: 2px solid #D9D9D9;
-    position: relative;
+    
+
+
 
     .container{
         // max-width: 100%!important;
+        margin-top: -120px;
 
         .splide__slide{
-            padding: 120px 10px 0 10px;
+            padding: 180px 10px 0 10px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            
-
+            position: relative;
+            opacity: 0.5;
+            transition: opacity 0.5s;
+                      
             .info-bulle{
-                width: 300px;
+                width: 320px;
                 padding: 20px;
                 position: absolute;
-                top: 15px;
+                bottom: 130px;
                 left: 50%;
                 transform: translateX(-50%);
                 background-color: var(--cl-white);
                 box-shadow: 0px 0px 3px 0px rgba(25, 58, 75, 0.4);
                 display: none;
+                border-radius: 30px;
 
                 // box-shadow: 8px 16px 100px -10px #193A4B66;
                 z-index: 20;
@@ -181,6 +187,7 @@ section {
             .info-bulle.active{
                 display: block;
             }
+
 
             .bullet{
                 border-radius: 40px;
@@ -207,6 +214,10 @@ section {
                 text-align: center;
                 word-wrap: wrap;
             }
+        }
+
+        .splide__slide.is-visible{
+            opacity: 1;
         }
         
         .splide__arrow{
@@ -426,6 +437,7 @@ section {
                             .accordion-header{
                                 display: flex;
                                 margin-bottom: 20px;
+                                cursor: pointer;
 
                                 h4, span{
                                     color: var(--cl-black);
@@ -444,16 +456,12 @@ section {
                                     font-weight: bold;
                                     transition: 0.5s;
                                 }
-
-                                span.active::before{
-                                    content: "+";
-                                }
                             }
 
                             .accordion-body{
                                 height: 0;
                                 opacity: 0;
-                                // transition: height 0.5s, opacity 0.05s;
+                                transition: height 0.5s, opacity 0.05s;
                                 
                                 p{
                                     font-size: 14px;
@@ -461,8 +469,14 @@ section {
                                 }
                             }
 
+                            .accordion-header.active{
+                                span::before{
+                                    content: "+";
+                                }
+                            }
+
                             .accordion-body.active{
-                                height: fit-content;
+                                height: 70px;
                                 opacity: 1;
                             }
                         }
@@ -515,13 +529,15 @@ section {
                 justify-content: center;
 
                 & > a{
-                    margin: 20px;
+                    margin: 10px;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
+                    font-size: 14px;
 
                     img{
                         margin-bottom: 10px;
+                        width: 50px;
                     }
                 }
             }
@@ -675,24 +691,29 @@ section {
 
                     .coords{
                         display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        gap: 20px;
 
                         & > div{
                             display: flex;
                             margin-right: 30px;
 
                             img{
-                                width: 40px;
+                                width: 30px;
                                 margin-right: 15px;
                             }
 
                             & > div{
                                 h5{
                                     font-weight: bold;
+                                    font-size: 14px;
                                     margin-bottom: 5px;
                                 }
 
                                 a, a:hover, a:visited{
                                     color: var(--cl-blue-light);
+                                    font-size: 14px;
                                 }
                             }
                         }
@@ -724,7 +745,7 @@ footer{
 
         & > div{
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(1, 1fr);
             gap: 30px;
             
 
@@ -758,6 +779,16 @@ footer{
             }
         }
 
+        & > div:last-child{
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
+
+            h4{
+                font-size: 14px;
+                
+            }
+        }
+
         
     }
 }
@@ -785,7 +816,7 @@ footer{
 
     #faq .container .card .grid-container > div:first-child{
         display: flex;
-        align-items: end;
+        align-items: flex-end;
         margin: 0;
     }
 
@@ -834,4 +865,59 @@ footer{
         gap: 50px;
     }
 
+
+    #contact .container .card .grid-container > .form-container .coords{
+        flex-direction: row;
+    }
+   
+}
+
+#mentionslegales{
+    margin-top: 130px!important;
+}
+
+
+#mentionslegales, #politiques{
+    padding: 60px 14px 20px 14px;
+    
+
+    .container{
+        h2{
+            font-size: 36px;
+            font-weight: bold;
+            color: var(--cl-blue-dark);
+            margin-bottom: 30px;
+        }
+
+        h3{
+            font-size: 20px;
+            font-weight: 600;
+            color: var(--cl-blue-dark);
+            margin-bottom: 20px;
+        }
+
+        p{
+            color: var(--cl-blue-dark);
+            margin-bottom: 10px;
+        }
+
+
+        div{
+            p:last-child{
+                margin-bottom: 30px;
+            }
+        }
+        
+    }
+}
+
+#politiques{
+    padding-bottom: 50px;
+}
+
+
+@media (min-width: 576px){
+    footer .container > div{
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
